[gd_scene load_steps=6 format=3 uid="uid://dcw1ehne2fkhc"]

[ext_resource type="Script" uid="uid://dxct2jcevk38e" path="res://Scenes/BonusMalusDisplayTest.gd" id="1_test_script"]
[ext_resource type="PackedScene" path="res://Scenes/StoreOverlay.tscn" id="2_store_overlay"]
[ext_resource type="PackedScene" uid="uid://dkm8y5qvxh3yw" path="res://Scenes/GameOverlay.tscn" id="3_game_overlay"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(1, 0.7, 0.1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.5, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(1, 0.8, 0.3, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.6, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="BonusMalusDisplayTest" type="Node2D"]
script = ExtResource("1_test_script")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="OpenStoreButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.1, 0.1, 0.15, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "Open Store"

[node name="InfoLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 20
text = "Cards Acquired: 0
Press button to open store

Check left side for bonus/malus display!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverlay" parent="." instance=ExtResource("3_game_overlay")]
visible = false

[node name="StoreOverlay" parent="." instance=ExtResource("2_store_overlay")]
